# accounts

./: .gitignore  Cargo.toml  README.md  books.json
src/: README.md  account.rs  book_repo.rs  books.rs  books_prev_versions.rs  generator.rs  lib.rs  main.rs  schedule.rs  scheduler.rs  serializer.rs
src/previous_versions/: books_no_version.json  books_v0.0.4.json
tests/fixtures/: monthly_with_multiple_modifiers.csv  tri_monthly_with_annual_modifier.csv
