[package]
name = "accounts"
version = "0.0.2"
edition = "2021"
license = "MIT"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
rusty-money = { version = "0.4.0" }
chrono = "0.4"
chronoutil = "0.2.3"
uuid = { version = "0.8", features = ["serde", "v4"] }