[package]
name = "accounts"
version = "0.0.4"
edition = "2021"
license = "MIT"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
rusty-money = { version = "0.5" }
chrono = "0.4.31"
chronoutil = "0.2.6"
uuid = { version = "1.6", features = ["serde", "v4"] }